--- a/ch3&4/index.html
+++ b/ch3&4/index.html
@@ -11,8 +11,12 @@
 
 <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-<script src="./App.js">
-  
+<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"
+  integrity="sha512-kp7YHLxuJDJcOzStgd6vtpxr4ZU9kjn77e6dBsivSz+pUuAuMlE2UTdKB7jjsWT84qbS8kdCWHPETnP/ctrFsA=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!-- <script src="./App.js"></script> -->
+<!-- <script src="./Menu.js" type="text/babel"></script> -->
+<script src="./Cat.js" type="text/babel"></script>
 </script>
 </body>
 </html>
